modified server manifest.